--- a/package.json
+++ b/package.json
@@ -2,7 +2,16 @@
   "name": "javascript-development-environment",
   "version": "1.0.0",
   "description": "JavaScript development environment Pluralsight course by Cory House",
-  "scripts": {},
+  "scripts": {
+    "prestart": "babel-node buildScripts/startMessage.js",
+    "start": "npm-run-all --parallel open:src share lint-watch test-watch",
+    "open:src": "babel-node buildScripts/srcServer.js",
+    "lint": "esw webpack.config.* src buildScripts --color",
+    "lint-watch": "npm run lint -- --watch",
+    "test":"mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
+    "test-watch":"npm run test -- --watch",
+    "share": "lt --port 3000"
+  },
   "author": "Cory House",
   "license": "MIT",
   "dependencies": {
